# Master

./: .gitignore  LICENSE  README.md  config.json  environment.yml  pyproject.toml  template.py
src/mscthesis/cli/: main.py  shared.py
src/mscthesis/cli/commands/: mesh.py  triangulate.py  visualize.py
src/mscthesis/cli/commands/config/: copy.py  get.py  init.py  set.py  show.py
src/mscthesis/cli/commands/mpibatch/: synthesize_uniform.py
src/mscthesis/cli/commands/synthesis/: uniform.py
src/mscthesis/config/: declaration.py  helpers.py
src/mscthesis/core/: io.py  visualization.py
src/mscthesis/core/meshing/: gmeshing.py  triangulation.py
src/mscthesis/core/synthesis/: helpers.py  uniform.py
src/mscthesis/utilities/: checks.py  ids.py  log.py  manifest.py  paths.py
src/myproject/cli/: main.py
src/myproject/cli/commands/: template.py
src/myproject/cli/commands/config/: copy.py  get.py  init.py  set.py  show.py
src/myproject/cli/commands/run/: test.py
src/myproject/config/: declaration.py
src/myproject/utilities/: paths.py
test/: test_declaration.py  test_helpers.py  test_shared.py
