[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "myproject"
version = "0.1.0"
description = "A template for centralized research projects"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Andreas Stillits", email = "andreas.stillits@gmail.com"}]
dependencies = ["argcomplete>=3.6.3", "pydantic>=2.12.4"]
# dependencies are defined in environment.yml instead

[project.scripts]
# quick access terminal cmds for often used functionality, e.g.
myproject = "myproject.cli.main:main"
# pkgname-cmd = "pkgname.scripts.filename:main"

[tool.hatch.build.targets.wheel]
# optionally one can have different "wheels", e.g. CPU version and a GPU version
packages = ["src/myproject"]

[project.optional-dependencies]
# optional developmental tools for quick maintainence
dev = ["ruff", "black", "mypy", "pytest"]


[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

select = [
    "E",
    "F",
    "I",
    "B"
]

ignore = [
    "E501"  # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["myproject"]
